--- a/Level 3/package.json
+++ b/Level 3/package.json
@@ -11,11 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "dotenv": "^8.2.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "md5": "^2.2.1",
-    "mongoose": "^5.9.10",
-    "mongoose-encryption": "^2.0.2"
+    "mongoose": "^5.9.10"
   }
 }
